--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -1,34 +1,9 @@
-name: Deploy to S3
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
+tasks:
+  build:
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build the website
-        run: npm run build
-
-      - name: Deploy to S3
-        run: |
-          aws s3 sync dist/ s3://your-bucket-name --delete
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1  # Replace with your S3 bucket's region
-
+    - checkout
+    # commands to upload static pages folder to AWS S3
+    - commands:
+      - aws s3 rm s3://$AWS_S3_BUCKET --recursive
+      - aws s3 cp _site s3://$AWS_S3_BUCKET --recursive
+      if: branch == 'main'
