--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -4,8 +4,11 @@ tasks:
     - checkout
     # commands to build Sparlex – Beauty & Spa Website Template
     - commands:
-      - gem install bundler
+    - gem install bundler
+      - rm Gemfile.lock
       - bundle install
+      - JEKYLL_ENV=production bundle exec jekyll build
+
       
     # commands to upload static pages folder to AWS S3
     - commands:
