--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -12,6 +12,6 @@ tasks:
       
     # commands to upload static pages folder to AWS S3
     - commands:
-      - aws s3 rm s3://$AWS_S3_BUCKET --recursive
-      - aws s3 cp _site s3://$AWS_S3_BUCKET --recursive
+      - aws s3 rm s3://$project-0001 --recursive
+      - aws s3 cp _site s3://$project-0001 --recursive
       if: branch == 'master'
