--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -1,12 +1,16 @@
-image: node:14
+tasks:
+  build:
+    steps:
+    - checkout
+    # commands to build jekyll website
+    - commands:
+      - gem install bundler
+      - rm Gemfile.lock
+      - bundle install
+      - JEKYLL_ENV=production bundle exec jekyll build
 
-steps:
-  - name: Checkout
-    uses: actions/checkout@v2
-
-  - name: Deploy to S3
-    run: |
-      aws s3 sync ./main/s3://project-0001
-    env:
-      AWS_ACCESS_KEY_ID: ${{ arn:aws:iam::283771154064:user/ismail@03 }}
-      AWS_SECRET_ACCESS_KEY: ${{ oQ+sPuBvXAQ+MEpWk7vNc6F+Avy36eWRMi/XFAX8 }}
+    # commands to upload static pages folder to AWS S3
+    - commands:
+      - aws s3 rm s3://$project-0001 --recursive
+      - aws s3 cp _site s3://$http://project-0001.s3-website-us-east-1.amazonaws.com --recursive
+      if: branch == 'master'
