--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -1,19 +1,15 @@
 tasks:
-  build:
-    steps:
+    build-and-deploy:
+      steps:
       - checkout
-
-      # Install dependencies and build Jekyll site
+      # commands to build jekyll website
       - commands:
-          - gem install bundler
-          - bundle install
-          - bundle exec jekyll build
-          
+        - bundle install
+        - JEKYLL_ENV=production bundle exec jekyll build
+      # Commands to upload static pages folder to AWS S3 or ftp
+      # Set AWS access key & secrets environment variables under 
+      # Razorops dashboard project pipelines 
       - commands:
-          # Set AWS credentials from Razorops secrets
-          - aws configure set aws_access_key_id $AKIAUEEQUF2INUWXSMFS
-          - aws configure set aws_secret_access_key $gglFtc0Aq7XdMWNDaPHLhVOka4QWXkRrAvZmi8XZ
-          
-          # Sync _site directory to S3 bucket
-          - aws s3 sync _site/ s3://project-0001 --delete
-      if: branch == 'master'
+        - aws s3 rm s3://$project-0001--recursive
+        - aws s3 cp _site s3://$http://project-0001.s3-website-us-east-1.amazonaws.com --recursive
+        if: branch == 'master'
